--- a/style.css
+++ b/style.css
@@ -2,37 +2,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Reggae+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hanalei&family=Reggae+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hanalei&family=Ranchers&family=Reggae+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    position: relative;
-    height: 100vh;                              /*sets the height to all the screen*/
-    overflow: hidden;
+    height: 100vh;
     margin: 0;
     padding: 0;
     justify-content: center;
     overflow-y:scroll;
+    font-family: 'Merriweather', serif;
 }
 
 header {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.377);
+    background-color: rgb(0, 0, 0);
     top: 0;
     width: 100vw;
-    height: 150px;
+    height: 110px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background-image: url('./img/black3.jpg');
+    justify-content: center;
 }
 
 header h1 {
     color: white;
-    font-family: 'Reggae One', cursive;
-    padding-left: 45%;
+    font-family: 'Merriweather', serif;
     font-weight: bold;
 }
 
@@ -45,29 +42,29 @@ header a {
 
 .content {
     justify-content: center;
-    padding-top: 150px;
     background-color: white;
     width: 100vw;
 }
 
 .SearchContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: white;
-    background-image: url('./img/white.jpg');
-    padding-bottom: 30px;
+    padding-bottom: 10px;
 }
 
-.SearchContainer p {
-    font-size: 48px;
-    color: rgba(0, 0, 0, 0.733);
-    font-family: 'Ranchers', cursive;
+.searchTitle {
+    font-size: 38px;
+    color: rgb(0, 0, 0);
+    font-family: 'Merriweather', serif;
+    padding: 10px 10px;
+    margin: 0;
 }
 
 .SearchContainer input {
-    background-color: rgba(0, 0, 0, 0.411);
+    background-color: rgb(0, 0, 0);
     border: 0;
     border-radius: 50px;
     color: #fff;
@@ -86,14 +83,14 @@ header a {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-image: url('./img/black3.jpg');
+    background-color: black;
+    padding: 30px 10px;
 }
 
 .Challenge {
     width: 450px;
     height: 250px;
     border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     margin:20px;
     text-align: center;
     transition: all 0.25s;
