--- a/style.css
+++ b/style.css
@@ -79,30 +79,35 @@ header a {
 
 .ChallengeContainer {
     width: 100vw;
-    height: 430;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     background-color: black;
-    padding: 30px 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .Challenge {
     width: 450px;
-    height: 250px;
+    height: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
     border-radius: 8px;
-    margin:20px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     transition: all 0.25s;
-    font-family: 'Bodoni Moda', serif;
     color: white;
-    font-size: 10px;
-    background-color: white;
+}
+
+.Challenge:hover {
+    background-color: rgb(255, 255, 255);
 }
 
 .Challenge img {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
+    border-radius: 15px;
 }
 
 .ChallengeContainer .hide {
@@ -117,7 +122,7 @@ header a {
     transform: translate(-50%,-50%);
     background-color: white;
     margin: 10px 10px;
-    padding: 5px;
+    padding: 5px 30px;
     border-radius: 50px;
     border-color: black;
     border-style: solid;
@@ -126,44 +131,39 @@ header a {
     text-decoration: none;
 }
 
+.Challenge a:hover {
+    color: #fff;
+    background-color: black;
+}
+
 footer{
-    height: 300px;
+    height: 60px;
     width: 100%;
-    background-image: url('./img/white.jpg');
+    display: flex;
+    flex-direction: column;
 }
 
 .social-icons {
-    display: inline-block;
+    text-align: center;
     height: 50px;
-    padding-left: 42%;
-    padding-top: 7%;
 }
 .social-icons i {
-	text-shadow: none;
 	color: rgb(0, 0, 0);
-	padding: 12px;
 	width: 42px;
 	height: 42px;
 	text-align: center;
 	font-size: 20px;
-	border-radius: 60px;
-	-moz-border-radius: 60px;
-	-webkit-border-radius: 60px;
-	border:solid 1px rgba(255,255,255,.1);
+    padding-top: 11px;
+	border-radius: 50%;
+	border:solid 1px rgb(0, 0, 0);
+    margin: 10px 15px 0 15px;
 }
 .social-icons i:hover {
-	background: #fff;
-	border-color: #eceff3;
+	background: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);
-}
-.social-icons i {
-	margin: 0 15px 0 15px;
-}
-.social-icons i:hover {
-	background: none;
 }
 
 .Copright {
-    padding-top: 2%;
-    padding-left: 42.5%;
+    text-align: center;
+    padding: 10px;
 }
